[package]
name = "colorize"
version = "0.1.0"
edition = "2021"
description = "Ergonomic terminal color printing"
license = "Apache-2.0"
homepage = "https://grafbase.com"
keywords = ["grafbase"]
readme = "README.md"
repository = "https://github.com/grafbase/grafbase"
# TODO: populate categories
# categories = []

[dependencies]
colored = "2"
hex-literal = "0.3"
once_cell = "1"
