[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Common code used in multiple crates in the CLI workspace"
license = "Apache-2.0"
homepage = "https://grafbase.com"
keywords = ["grafbase"]
readme = "README.md"
repository = "https://github.com/grafbase/grafbase"
# TODO: populate categories
# categories = []

[dependencies]
dirs = "4"
exitcode = "1"
once_cell = "1"
thiserror = "1"
