[package]
name = "grafbase-composition"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql-parser = "6"
async-graphql-value = "6"
indexmap = "2"
itertools = "0.11.0"

[dev-dependencies]
datatest-stable = "0.2.3"
similar = "2"
miette = { version = "5.10.0", features = ["fancy"] }

[[test]]
name = "composition_tests"
harness = false

