[package]
name = "dev-server"
version = "0.1.0"
edition = "2021"
description = "a wrapper for the grafbase worker"
license = "Apache-2.0"
homepage = "https://grafbase.com"
keywords = ["grafbase"]
readme = "README.md"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
actix-web = "4"
common = { path = "../common", version = "0.1.0" }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
