[package]
name = "dev-server"
version = "0.1.0"
edition = "2021"
description = "a wrapper for the grafbase worker"
license = "Apache-2.0"
homepage = "https://grafbase.com"
keywords = ["grafbase"]
readme = "README.md"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
actix-web = "4"
common = { path = "../common", version = "0.1.0" }
rust-embed = "6.4.0"
exitcode = "1.1.2"
thiserror = "1.0.31"
version-compare = "0.1.0"
