[package]
name = "dev-server"
version = "0.1.0"
edition = "2021"
description = "a wrapper for the grafbase worker"
license = "Apache-2.0"
homepage = "https://grafbase.com"
keywords = ["grafbase"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
axum = "0.5"
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common", version = "0.1.0" }
exitcode = "1.1"
hyper = "0.14.19"
indoc = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
rust-embed = "6.4"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
    "chrono",
    "runtime-tokio-rustls",
    "sqlite",
    "json",
] }
thiserror = "1.0"
tokio = { version = "1.18", features = ["full"] }
version-compare = "0.1"
