[package]
name = "engine-config-builder"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap.workspace = true
tracing.workspace = true

engine-config = { path = "../engine/config" }
federated-graph.workspace = true
gateway-config.workspace = true
grafbase-workspace-hack.workspace = true

[lints]
workspace = true
