[package]
authors = ["Grafbase"]
description = "A dynamic GraphQL engine written in Rust"
edition = "2024"
homepage = "https://grafbase.com"
keywords = ["graphql", "engine", "grafbase"]
license = "MPL-2.0"
name = "engine"
repository = "https://github.com/grafbase/grafbase"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
async-sse.workspace = true
base64.workspace = true
blake3.workspace = true
bytes.workspace = true
crossbeam-queue.workspace = true
error = { path = "./error", package = "engine-error" }
event-queue.workspace = true
extension-catalog.workspace = true
fixedbitset.workspace = true
futures.workspace = true
futures-lite.workspace = true
futures-util.workspace = true
fxhash.workspace = true
grafbase-telemetry.workspace = true
grafbase-workspace-hack.workspace = true
headers.workspace = true
hex.workspace = true
http.workspace = true
id-derives = { path = "./id-derives", package = "engine-id-derives" }
id-newtypes = { path = "./id-newtypes", package = "engine-id-newtypes" }
im.workspace = true
itertools.workspace = true
mediatype.workspace = true
mime.workspace = true
minicbor-serde = { workspace = true, features = ["alloc"] }
multipart-stream.workspace = true
operation = { path = "./operation", package = "engine-operation" }
percent-encoding.workspace = true
query-solver = { path = "./query-solver", package = "engine-query-solver" }
ramhorns.workspace = true
rand.workspace = true
runtime.workspace = true
schema = { path = "./schema", package = "engine-schema" }
serde = { workspace = true, features = ["rc"] }
serde-value.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
serde_urlencoded.workspace = true
serde_with.workspace = true
sha2.workspace = true
sonic-rs.workspace = true
thiserror.workspace = true
tower = { workspace = true, features = ["retry"] }
tracing.workspace = true
url.workspace = true
walker = { path = "./walker", package = "engine-walker" }

[dev-dependencies]
pretty_assertions.workspace = true
